some design changes and resume dwonload setup done

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-tsparticles": "^2.10.1",
     "sort-by": "^0.0.2",
     "split-type": "^0.3.3",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1",
     "tsparticles": "^2.10.1"
   },
