--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^10.12.17",
     "localforage": "^1.10.0",
